Prevented squished headers in code blocks

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -356,4 +356,5 @@ blockquote {
   padding: .25vh .5vh .25vh 1vh;
   margin-bottom: 1em;
   border-left: 4px solid $accentColour;
+  h1, h2, h3, h4, h5, h6 { padding: 1.5vh .5vh .25vh 1vh; }
 }
